Improved documentation and updated vignette.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@691 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/textmin/ChangeLog
+++ b/trunk/textmin/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-17  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* inst/doc/: Rewrote vignette.
+
+	* man/: Improved documentation.
+
 2006-12-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Updated documentation.
