--- a/trunk/tm/inst/doc/tm.Rnw
+++ b/trunk/tm/inst/doc/tm.Rnw
@@ -1,5 +1,8 @@
 \documentclass[a4paper]{article}
 
+\usepackage[utf8]{inputenc}
+\usepackage{courier}
+
 \newcommand{\strong}[1]{{\normalfont\fontseries{b}\selectfont #1}}
 \newcommand{\class}[1]{\mbox{\textsf{#1}}}
 \newcommand{\func}[1]{\mbox{\texttt{#1()}}}
@@ -27,26 +30,23 @@ This vignette gives a short overview over available features in the
 \pkg{tm} package for text mining purposes in \proglang{R}.
 \end{abstract}
 
-\section{Working with \pkg{tm}}
-
-\subsection{Loading the Package}
+\section*{Loading the Package}
 Before actually working we need to load the package:
 <<>>=
 library("tm")
 @
 
-\subsection{Data Import}
+\section*{Data Import}
 The main structure for managing documents is a socalled text document
 collection (\class{TextDocCol}). Its constructor takes following arguments:
 \begin{itemize}
 \item \code{object}: a \class{Source} object which abstracts the input location
 \item \code{parser}: a parser which constructs a text document from a single element
   delivered by a source. A parser must have the argument signature \code{(elem,
-    lodsupport, load, id)}. The first argument is the element provided
-  from the source, the second indicates whether the source supports
-  load on demand, the third if the user wants to load the documents
-  immediately into memory, and the fourth is a unique identification
-  string.
+    load, id)}. The first argument is the element provided
+  from the source, the second indicates whether the user wants to load
+  the documents immediately into memory, and the third is a unique
+  identification string.
 \item \code{...}: formally if the passed over \code{parser} function is of
   class \code{function\_generator}, it is assumed to be a function
   generating a parser. This way custom parsers taking various
@@ -57,8 +57,8 @@ collection (\class{TextDocCol}). Its constructor takes following arguments:
 \end{itemize}
 
 Available sources are \class{DirSource}, \class{CSVSource},
-\class{GmaneRSource} and
-\class{ReutersSource} which handle a directory, a mixed CSV, a Gmane R
+\class{GmaneSource} and
+\class{ReutersSource} which handle a directory, a mixed CSV, a Gmane
 mailing list archive RSS feed or a
 mixed Reuters file (mixed means several documents are in a single
 file). Except \class{DirSource}, which is designated
@@ -66,16 +66,16 @@ solely for directories on a file system, all other implemented sources
 can take connections as input (a character string is interpreted as
 filename).
 
-This package ships with several readers (\code{read\_plain}
-(default), \code{read\_rcv1}, \code{read\_reut21578xml},
-\code{read\_gmane\_r} and \code{read\_newsgroup}). The default just
+This package ships with several readers (\code{read\_plain()}
+(default), \code{read\_rcv1()}, \code{read\_reut21578xml()},
+\code{read\_gmane()} and \code{read\_newsgroup()}). The default just
 reads in the whole input file and interprets the content as text.
 
 Plain text files in a directory:
 <<>>=
 # Plain text
 txt <- system.file("texts/txt/", package = "tm")
-TextDocCol(DirSource(txt, load = TRUE))
+(Ovid.tdc <- TextDocCol(DirSource(txt), load = TRUE))
 @
 
 A single comma separated values file:
@@ -106,7 +106,7 @@ Analogously for files in the Reuters Corpus Volume 1 format:
 rcv1 <- system.file("texts/rcv1/", package = "tm")
 rcv1.xml <- system.file("texts/rcv1.xml", package = "tm")
 
-TextDocCol(DirSource(rcv1, load = TRUE), read_rcv1)
+TextDocCol(DirSource(rcv1), read_rcv1, load = TRUE)
 TextDocCol(ReutersSource(rcv1.xml), read_rcv1)
 @
 
@@ -115,31 +115,40 @@ Or mails from newsgroups (as found in the UCI KDD newsgroup dataset):
 # UCI KDD Newsgroup Mails
 newsgroup <- system.file("texts/newsgroup/", package = "tm")
 
-TextDocCol(DirSource(newsgroup, load = TRUE), read_newsgroup)
+TextDocCol(DirSource(newsgroup), read_newsgroup, load = TRUE)
 @
 
 RSS feed as delivered by Gmane for the R mailing list archive:
 <<>>=
 rss <- system.file("texts/gmane.comp.lang.r.gr.rdf", package = "tm")
 
-TextDocCol(GmaneRSource(rss), read_gmane_r)
+TextDocCol(GmaneSource(rss), read_gmane)
 @
 
-\subsection{Inspecting the Text Document Collection}
+\section*{Inspecting the Text Document Collection}
 Custom \code{show} and \code{summary} methods are available, which
 hide the raw amount of information (consider a collection could
-consists of several thousand documents, like a database). In order to
-actually see the content use the command \code{inspect} on a
-collection.
+consists of several thousand documents, like a
+database). \code{summary} gives more details on metadata than
+\code{show}, whereas in order to actually see the content of text
+documents use the command \code{inspect} on a collection.
+<<>>=
+show(Ovid.tdc)
+summary(Ovid.tdc)
+inspect(Ovid.tdc[1:2])
+@
 
-\subsection{Transformations}
+\section*{Transformations}
 Once we have a text document collection one typically wants to modify
 the documents in it, e.g., stemming, stopword removal, et cetera. All
 this functionality is subsumed by the concept of
 \emph{transformation}s in \pkg{tm}. Transformations are done via
-the \code{tm\_map} function.
+the \code{tm\_map} function which applies a function to all elements
+of the collection. Basically, all transformations work on single text
+documents and \code{tm\_map} just applies them to all documents in a
+document collection.
 
-\subsubsection{Loading Documents into Memory}
+\subsection*{Loading Documents into Memory}
 If the source objects supports load on demand, but the user has not
 enforced the package to load the input content directly into memory,
 this can be done manually via \code{load\_doc}. Normally it is not
@@ -150,7 +159,7 @@ automatically loaded if accessed via \code{[[}).
 reut21578.tdc <- tm_map(reut21578.tdc, load_doc)
 @
 
-\subsubsection{Converting to Plaintext Documents}
+\subsection*{Converting to Plaintext Documents}
 The text document collection \code{reut21578.tdc} contains documents
 in XML format. We have no further use for the XML interna and just
 want to work with the text content. This can be done by converting the
@@ -161,55 +170,63 @@ documents to plaintext documents. It is done by the generic
 reut21578.tdc <- tm_map(reut21578.tdc, as.plain, convert_reut21578xml_plain)
 @
 
-\subsubsection{Eliminating Extra Whitespace}
+\subsection*{Eliminating Extra Whitespace}
 Extra whitespace is eliminated by:
 <<>>=
 reut21578.tdc <- tm_map(reut21578.tdc, strip_whitespace)
 @
 
-\subsubsection{Convert to Lower Case}
+\subsection*{Convert to Lower Case}
 Conversion to lower case by:
 <<>>=
 reut21578.tdc <- tm_map(reut21578.tdc, tm_tolower)
 @
 
-\subsubsection{Remove Stopwords}
+\subsection*{Remove Stopwords}
 Removal of stopwords by:
 <<>>=
 data(stopwords_en)
 reut21578.tdc <- tm_map(reut21578.tdc, remove_words, stopwords_en)
 @
 
-\subsubsection{Stemming}
+\subsection*{Stemming}
 Stemming is done by:
 <<>>=
 tm_map(reut21578.tdc, stem_doc)
 @
 
-\subsection{Filters}
+\section*{Filters}
 Often it is of special interest to filter out documents satisfying given
 properties. For this purpose the function \code{tm\_filter} is
 designated. It is possible to write custom filter functions, but for
-most cases the default filter does it job: it integrates a minimal
+most cases the default filter does its job: it integrates a minimal
 query language to filter metadata. Statements in this query language
 are statements as used for subsetting data frames.
 
-E.g., following statement filters out those documents, where
-\code{COMPUTER TERMINAL SYSTEMS <CPML> COMPLETES SALE} is their
-heading and has an \code{ID} equal to 10 (both are metadata slot
+E.g., the following statement filters out those documents having
+\code{COMPUTER TERMINAL SYSTEMS <CPML> COMPLETES SALE} as their
+heading and an \code{ID} equal to 10 (both are metadata slot
 variables of the text document).
 <<>>=
-tm_filter(reut21578.tdc, "identifier == '10' & heading == 'COMPUTER TERMINAL SYSTEMS <CPML> COMPLETES SALE'")
+query <- "identifier == '10' & heading == 'COMPUTER TERMINAL SYSTEMS <CPML> COMPLETES SALE'"
+tm_filter(reut21578.tdc, query)
 @
 
-There is also a full text search available as filter:
+There is also a full text search filter available which accepts regular
+expressions:
 <<>>=
 tm_filter(reut21578.tdc, FUN = search_fulltext, "partnership", doclevel = TRUE)
 @
 
-\subsection{Adding Data or Metadata}
+\section*{Adding Data or Metadata}
 Text documents or metadata can be added to text document collections
-with \code{append\_elem} and \code{append\_meta}, respectively.
+with \code{append\_elem} and \code{append\_meta}, respectively. The
+text document collection has two types of metadata: one is the
+metadata on the document collection level (\code{dcmeta}), the other
+is the metadata related to the documents (e.g., clusterings)
+(\code{dmeta}) in form of a dataframe. For the method
+\code{append\_elem} it is possible to give a row of values in the
+dataframe for the added data element.
 <<>>=
 data(crude)
 reut21578.tdc <- append_elem(reut21578.tdc, crude[[1]], list())
@@ -219,7 +236,7 @@ DCMetaData(reut21578.tdc)
 DMetaData(reut21578.tdc)
 @
 
-\subsection{Removing Metadata}
+\section*{Removing Metadata}
 The metadata of text document collections can be easily modified or
 removed:
 <<>>=
@@ -229,8 +246,9 @@ DCMetaData(reut21578.tdc)
 DMetaData(reut21578.tdc)
 @
 
-\subsection{Operators}
-Most standard operators are available for text document
+\section*{Operators}
+Most standard operators (\code{[}, \code{[<-}, \code{[[}, \code{[[<-},
+  \code{c}, \code{length}) are available for text document
 collections with semantics similar to standard \proglang{R}
 routines.
 E.g. \code{c} concatenates two (or more) text document
@@ -246,10 +264,13 @@ crude[[1]] %IN% reut21578.tdc
 crude[[2]] %IN% reut21578.tdc
 @
 
-\subsection{Keeping Track of Text Document Collections}
+\section*{Keeping Track of Text Document Collections}
 There is a mechanism available for managing text document
 collections. It is called \class{TextRepository}. A typical use would
-be to save different states of a text document collection.
+be to save different states of a text document collection. A
+repository has metadata in list format which can be either set with
+\code{append\_elem} as additional argument (e.g., a date when a new
+element is added), or directly with \code{append\_meta}.
 <<>>=
 data(acq)
 repo <- TextRepository(reut21578.tdc)
@@ -261,7 +282,7 @@ summary(repo[[1]])
 summary(repo[[2]])
 @
 
-\subsection{Creating Term-Document Matrices}
+\section*{Creating Term-Document Matrices}
 A common approach in text mining is to create a term-document matrix
 for given texts. In this package the class \class{TermDocMatrix}
 handles this for text document collections.
@@ -270,17 +291,21 @@ tdm <- TermDocMatrix(reut21578.tdc)
 tdm[1:8,50:55]
 @
 
-\subsection{Operations on Term-Document Matrices}
+\section*{Operations on Term-Document Matrices}
 Besides the fact that on this matrix a huge amount of \proglang{R}
 functions (like clustering, classifications, etc.) is possible, this
 package brings some shortcuts. Consider we
 want to find those terms that occur at least 5 times:
 <<>>=
-find_hf_terms(tdm, 5)
+find_freq_terms(tdm, 5, Inf)
 @
 Or we want to find associations (i.e., terms which correlate) with at
 least $0.97$ correlation for the term \code{crop}:
 <<>>=
 find_assocs(tdm, "crop", 0.97)
 @
+The function also accepts a matrix as first argument (which does not
+inherit from a term-document matrix). This matrix is then interpreted
+as a correlation matrix and directly used. With this approach
+different correlation measures can be employed.
 \end{document}
