Changed vignette for compatibility with R 2.4.0.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@695 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/inst/doc/tm.Rnw
+++ b/trunk/tm/inst/doc/tm.Rnw
@@ -229,7 +229,7 @@ is the metadata related to the documents (e.g., clusterings)
 dataframe for the added data element.
 <<>>=
 data(crude)
-reut21578.tdc <- append_elem(reut21578.tdc, crude[[1]], list())
+reut21578.tdc <- append_elem(reut21578.tdc, crude[[1]], 0)
 reut21578.tdc <- append_meta(reut21578.tdc, dcmeta = list(test = c(1,2,3)), dmeta = list(cl1 = 1:11))
 summary(reut21578.tdc)
 DCMetaData(reut21578.tdc)
