--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Changes due to Kurt's review.
+
 2006-12-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Implemented improvements based upon comments by David
