wordStem now explicitly uses Rstem namespace.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@702 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-09  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (stemDoc): Use Rstem::wordStem instead of
+	wordStem.
+
 2007-01-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Changes due to Kurt's review.
