Datasets acq and crude can now be created on the fly with tmDataSetup.R.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@715 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/ChangeLog
+++ b/trunk/tm/ChangeLog
@@ -1,5 +1,8 @@
 2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* Work/tmDataSetup.R: The datasets acq and crude can now be
+	created on the fly.
+
 	* R/stopwords.R: Introduced a function returning the stopwords for
 	a given language (English, German and French at the moment)
 
